// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getTransitionAnimation on the left in RTL not shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "100% , 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "320px , 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the left in RTL shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the left not shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "-100% , 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "-320px , 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the left shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the right in RTL not shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "-100% , 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "-320px , 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the right in RTL shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the right not shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "100% , 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "320px , 0, 0",
  ");",
  ";}",
  ";",
]
`;

exports[`getTransitionAnimation on the right shown, should match snapshot 1`] = `
Array [
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  "@media ",
  [Function],
  "{",
  "transform:translate3d(",
  "0, 0, 0",
  ");",
  ";}",
  ";",
]
`;
